# EasyTP-Backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  db.sqlite3  entrypoint.sh  main.py  manage.py  pyproject.toml  requirements.txt
.github/workflows/: backend.yml  build.yml  ci.yml  lint.yml  logisim.yml  pinball.yml  test.yml
EasyTPCloud/: asgi.py  cli.py  urls.py  wsgi.py
EasyTPCloud/settings/: base.py  development.py  production.py  test.py
api/: decorators.py  permissions.py  serializers.py  urls.py  views.py
dockerfiles/logisim/: Dockerfile  menu.xml  supervisord.conf
dockerfiles/pinball/: Dockerfile  README.md  menu.xml  supervisord.conf
main/: admin.py  apps.py  custom_actions.py  custom_functions.py  custom_validators.py  forms.py  middleware.py  models.py  signals.py  throttling.py  urls.py  views.py
main/management/commands/: setup_logisim.py  setup_pinball.py
main/migrations/: 0001_initial.py  0002_alter_app_image.py  0003_pod_cleanup_job_name.py  0004_useractivity_country.py  0005_app_app_type.py  0006_app_session_duration_minutes.py
main/templates/main/: admin.html  display_apps.html  file_explorer.html  landing.html  list_students.html  login.html  signup.html  skeleton.html  student_home.html  teacher_home.html  user_activities.html
main/utils/: activity_logger.py  cloudflare_turn.py  turnstile.py
shared/: __init__.py
shared/files/: __init__.py  operations.py  storage.py  validation.py
shared/kubernetes/: __init__.py  cleanup.py  config.py  deployments.py  pods.py
shared/utils/: __init__.py  threading.py
tests/: conftest.py
tests/api/: test_apps_endpoints.py  test_auth_endpoints.py  test_files_endpoints.py  test_webhook_endpoints.py
tests/unit/: test_file_validation.py  test_models.py  test_permissions.py  test_serializers.py
