[project]
name = "easytp-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asgiref==3.8.1",
    "cachetools<=6.0",
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "cssselect==1.3.0",
    "django==5.2.6",
    "django-cors-headers==4.8.0",
    "django-extensions==4.1",
    "django-filer==3.3.1",
    "django-filter==25.1",
    "django-js-asset==3.1.2",
    "django-mptt==0.17.0",
    "django-polymorphic==3.1.0",
    "django-redis==6.0.0",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt==5.5.1",
    "docker==7.1.0",
    "easy-thumbnails==2.10",
    "et-xmlfile==2.0.0",
    "google-auth==2.40.3",
    "gunicorn>=23.0.0",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "kubernetes==33.1.0",
    "lxml==5.4.0",
    "markdown==3.8.2",
    "oauthlib==3.3.1",
    "openpyxl==3.1.5",
    "pillow==11.2.1",
    "pip>=25.3",
    "psycopg2-binary==2.9.11",
    "pyasn==1.6.2",
    "pyasn1-modules==0.4.1",
    "python-dateutil==2.9.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "redis==6.2.0",
    "reportlab==4.4.2",
    "requests==2.32.4",
    "requests-oauthlib==2.0.0",
    "rsa==4.9",
    "six==1.17.0",
    "sqlparse==0.5.3",
    "svglib==1.5.1",
    "tinycss2==1.4.0",
    "unidecode==1.4.0",
    "urllib3==2.5.0",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "zipp==3.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-django>=4.5.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "factory-boy>=3.3.0",
    "faker>=22.0.0",
    "responses>=0.25.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "EasyTPCloud.settings.test"
python_files = ["test_*.py"]
addopts = [
    "--strict-markers",
    "-ra",
    "--cov=api",
    "--cov=main",
    "--cov=shared",
    "--cov-report=term-missing",
]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["api*", "main*", "shared*", "EasyTPCloud*"]
exclude = ["tests*", "static*"]

[tool.coverage.run]
omit = [
    "tests/*",
    "*/migrations/*",
    "*/settings/*",
    "manage.py",
    "*/admin.py",
    "main/views.py",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
